--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spicebluetask",
   "version": "1.0.0",
-  "homepage": "https://spicebluetask.herokuapp.com/",
+  "homepage": ".",
   "scripts": {
     "start": "webpack-dev-server --mode development --devtool inline-source-map",
     "build": "NODE_ENV='prod' webpack --mode=production",
