added engine node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "spicebluetask",
   "version": "1.0.0",
   "homepage": ".",
+  "engines": {
+    "node": "12.x" 
+  },
   "scripts": {
     "start": "webpack-dev-server --mode development --devtool inline-source-map",
     "build": "NODE_ENV='prod' webpack --mode=production",
